--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <title>Hello React</title>
+  <title>Ad Manager</title>
 </html>
 <body>
   <div id="app-root"></div>
